2002-05-16  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/Goodies.c (RedrawTipWindow):
	(RedrawTipWindow):
	* FvwmTaskBar/ButtonArray.c (ButtonDraw):
	* FvwmIdent/FvwmIdent.c (DrawItems):

2002-05-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/x_pager.c:
	fixed incorrect initial positions of subwindows in CxRxNxM pager;
	still only the first desk is drawn fully for now

2002-05-09  olicha  <olivier.chapuis@free.fr>

	* */*:
	Call FRenderInit and include libs/FRenderInit.h in all modules which
	are linked against Xrender

2002-05-09  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/FvwmScript.c (myErrorHandler):
	* FvwmIconBox/FvwmIconBox.c (myErrorHandler):
	* FvwmButtons/FvwmButtons.c (myErrorHandler):
	* FvwmWinList/FvwmWinList.c (ErrorHandler):
	* FvwmTaskBar/FvwmTaskBar.c (ErrorHandler):
	* FvwmIconMan/x.c (handle_error):
	Allows BadPicture XRender errors

2002-05-05  olicha  <olivier.chapuis@free.fr>

	* FvwmIdent/FvwmIdent.c (MakeList):
	Fixed ewmh init state

2002-05-02  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/ButtonArray.c (ButtonDraw):
	* FvwmTaskBar/List.c (UpdateItemPicture): 
	Fixed problems with Xft fonts and FvwmPicture update

2002-05-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
	fixed a problem with sticky icons

2002-04-30  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPerl/FvwmPerl.in:
	make all messages synchronous by default;
	new eval functions stop(), skip(), unlock(), detach()

2002-04-29  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/List.c (UpdateItemPicture):
	* FvwmTaskBar/ButtonArray.c (ButtonDraw):
	A picture fix

2002-04-28  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/x_pager.c:
	fixed initial position of 2 subwindows, current only for one desk;
	fixed position of labels with LabelsBelow

2002-04-25  Mikhael Goikhman  <migo@homemail.com>

	* **/*.1:
	improved main headers

	* FvwmTheme/FvwmTheme.1:
	spell check in the Tint commands
